--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -63,12 +63,12 @@
    "id": "14ba63d7-74d0-4dae-b0cd-261d8a1c8c65",
    "metadata": {},
    "source": [
-    "Data Science Tools|\n",
+    "|Data Science Tools|\n",
     "|:-|\n",
-    "RStudio\n",
-    "JupyterLab\n",
-    "Apache Spark\n",
-    "Apache Hadoop"
+    "|RStudio|\n",
+    "|JupyterLab|\n",
+    "|Apache Spark|\n",
+    "|Apache Hadoop|"
    ]
   },
   {
